# django

./: .gitignore  pyproject.toml
core/: settings.py
