[tool.poetry]
name = "django"
version = "0.1.0"
description = ""
authors = ["Camryn Crowder <camryn.crowder@apkudo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
environs = "^14.1.1"
psycopg = "^3.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
